--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "bitsharesjs": "^1.4.1",
     "bitsharesjs-ws": "^1.3.1",
+    "isomorphic-fetch": "^2.2.1",
+    "socket.io-client": "^2.1.1",
     "vue": "^2.5.2"
   },
   "devDependencies": {
