--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bitsharesjs-ws": "^1.3.1",
     "isomorphic-fetch": "^2.2.1",
     "socket.io-client": "^2.1.1",
+    "v-tooltip": "^2.0.0-rc.33",
     "vue": "^2.5.2"
   },
   "devDependencies": {
