--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "babel-preset-es2017": "^6.24.1",
     "bitsharesjs": "^1.4.1",
     "bitsharesjs-ws": "^1.3.1",
+    "es6-promise": "^4.2.5",
     "isomorphic-fetch": "^2.2.1",
     "socket.io-client": "^2.1.1",
     "vue": "^2.5.2"
