--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "es6-promise": "^4.2.5",
     "isomorphic-fetch": "^2.2.1",
     "socket.io-client": "^2.1.1",
-    "vue": "^2.5.2"
+    "vue": "^2.5.2",
+    "webpack-cli": "^3.2.3"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
@@ -34,22 +35,22 @@
     "file-loader": "^1.1.4",
     "friendly-errors-webpack-plugin": "^1.6.1",
     "html-webpack-plugin": "^2.30.1",
-    "webpack-bundle-analyzer": "^2.9.0",
     "node-notifier": "^5.1.2",
-    "postcss-import": "^11.0.0",
-    "postcss-loader": "^2.0.8",
-    "semver": "^5.3.0",
-    "shelljs": "^0.7.6",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
     "ora": "^1.2.0",
+    "portfinder": "^1.0.13",
+    "postcss-import": "^11.0.0",
+    "postcss-loader": "^2.0.8",
     "rimraf": "^2.6.0",
+    "semver": "^5.3.0",
+    "shelljs": "^0.7.6",
     "url-loader": "^0.5.8",
     "vue-loader": "^13.3.0",
     "vue-style-loader": "^3.0.1",
     "vue-template-compiler": "^2.5.2",
-    "portfinder": "^1.0.13",
     "webpack": "^3.6.0",
-    "webpack-dev-server": ">=3.1.11",
+    "webpack-bundle-analyzer": "^2.9.0",
+    "webpack-dev-server": "^3.0.0",
     "webpack-merge": "^4.1.0"
   },
   "engines": {
