use new beet-js through npm

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "@beetapp/beet-js": "^0.6.1",
     "babel-preset-es2017": "^6.24.1",
     "bitsharesjs": "^1.4.1",
     "bitsharesjs-ws": "^1.3.1",
